fix right drawer ans scoring
